<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/pt_itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/item_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_itemPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_itemName"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_item_content_description" />

    <EditText
        android:id="@+id/et_itemDescription"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:text="@string/item_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_itemName" />

    <EditText
        android:id="@+id/et_itemQuantity"
        android:layout_width="109dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/item_quantity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/pt_itemGroup"
        app:layout_constraintTop_toBottomOf="@+id/iv_itemPicture" />

    <ToggleButton
        android:id="@+id/tb_editFields"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="446dp" />

    <EditText
        android:id="@+id/pt_itemGroup"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/group_name"
        app:layout_constraintLeft_toRightOf="@+id/et_itemQuantity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_itemPicture" />

    <Button
        android:id="@+id/b_gotoSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/item_webpage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_editTitle"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="47dp"
        android:text="@string/item_view_edit"
        app:layout_constraintBottom_toTopOf="@+id/tb_editFields"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>